Changed some of the display settings of the website
stuff

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               <li><a href="/music.html">Music Genre Classification Model</a></li>
             </ul>
           </nav>
-        <div id="titleBox" class="titleBoxes"><h1>Language Recognition Model</h1></div>
+        <div id="titleBox" class="titleText"><h1>Language Recognition Model</h1></div>
         <div id="background" class="normalText">
             <p class="half">This website is designed to help in a multitude of langauge translation, learning, and recognition. We provide a langauge text translation device and an audio recognizer that can detect languages being spoken. So far, we are only able to translate and recognize English, Chinese, and Japanese. 
             </p>
@@ -75,7 +75,7 @@
                     // Stop the recognition in 5 seconds.
                     // setTimeout(() => recognizer.stopListening(), 5000);
                 }
-        </script>
+            </script>
         </div>
     </body>
 </html> 
