Tried experimenting with stuff

--- a/music.html
+++ b/music.html
@@ -14,14 +14,16 @@
               <li><a href="/index.html">Language Recognition Model</a></li>
             </ul>
           </nav>
-        <div id="titleBox" class="titleBoxes"><h1 class="title">Music Genre Recognition Model</h1></div>
+        <div id="titleBox" class="titleText"><h1 class="title">Music Genre Recognition Model</h1></div>
         <div id="background" class="normalText">
             <p class="half">
-                This is our second tool. This tool recgonizes music from a variety of eras in our history. 
-                Simply play a short audio clip and let our machines learning model tell you what era it is from!
+                This is our second tool. This tool recgonizes music from a variety<br> of eras in our history. Simply play a short audio clip and let our<br> machines learning model tell you what era it is from!
             </p>
         </div>
-
+        <div id="background" class="normalText"><a href="https://teachablemachine.withgoogle.com/models/_6Ift9KKb/">
+            Music Recognition Model
+          </a>
+        </div>
         <!-- Recording Audio -->
         <h1 class="title">Audio Recorder</h1>
         
